--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .hide-scroll-bar {
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -17,31 +16,26 @@
   font-family: 'Inter';
   font-style: normal;
 }
-@layer components{
-
-
-.scrollbarStyling::-webkit-scrollbar {
+@layer components {
+  .scrollbarStyling::-webkit-scrollbar {
     width: 10px;
   }
 
   /* Track */
-.scrollbarStyling::-webkit-scrollbar-track {
-    background: #DEDEDE;
-    border: 3px solid   #FCFCFC;
+  .scrollbarStyling::-webkit-scrollbar-track {
+    background: #dedede;
+    border: 3px solid #fcfcfc;
     border-radius: 10px;
   }
 
   /* Handle */
-.scrollbarStyling::-webkit-scrollbar-thumb {
-    background: #C1403F;
+  .scrollbarStyling::-webkit-scrollbar-thumb {
+    background: #c1403f;
     border-radius: 10px;
   }
 
   /* Handle on hover */
-.scrollbarStyling::-webkit-scrollbar-thumb:hover {
+  .scrollbarStyling::-webkit-scrollbar-thumb:hover {
     background: #555;
   }
 }
-
-
-
